--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -79,6 +79,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_R = []\n",
+    "max_R = []\n",
+    "with h5py.File(mcmc_samples_file, 'r') as f:\n",
+    "    for k in f.keys():\n",
+    "        R = f[k]['chain-stats/gelman_rubin'][:]\n",
+    "        mean_R.append(np.mean(R))\n",
+    "        max_R.append(np.max(R))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean_R_old = []\n",
+    "# max_R_old = []\n",
+    "# with h5py.File('../../cache/apogee-jitter-mcmc-old.hdf5', 'r') as f:\n",
+    "#     for k in f.keys():\n",
+    "#         R = f[k]['chain-stats/gelman_rubin'][:]\n",
+    "#         mean_R_old.append(np.mean(R))\n",
+    "#         max_R_old.append(np.max(R))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bins = np.linspace(0.9, 2.2, 32)\n",
+    "# plt.hist(mean_R, bins=bins, alpha=0.3)\n",
+    "# plt.hist(mean_R_old, bins=bins, alpha=0.3);\n",
+    "# plt.axvline(1.1)\n",
+    "\n",
+    "# print((np.array(mean_R) < 1.1).sum(),\n",
+    "#       (np.array(mean_R_old) < 1.1).sum())\n",
+    "\n",
+    "# plt.figure()\n",
+    "# plt.hist(max_R, bins=bins, alpha=0.3)\n",
+    "# plt.hist(max_R_old, bins=bins, alpha=0.3);\n",
+    "# plt.axvline(1.1)\n",
+    "\n",
+    "# print((np.array(max_R) < 1.1).sum(),\n",
+    "#       (np.array(max_R_old) < 1.1).sum())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -178,7 +231,7 @@
     "with h5py.File(mcmc_samples_file, 'r') as mcmc_f, h5py.File(samples_file, 'r') as joker_f:\n",
     "    for i, star in tqdm.tqdm(enumerate(unimodal_stars)):\n",
     "        data = star.apogeervdata()\n",
-    "        if star.apogee_id in mcmc_f and unimodal_converged[i]:\n",
+    "        if star.apogee_id in mcmc_f: # and unimodal_converged[i]:\n",
     "            samples = JokerSamples.from_hdf5(mcmc_f[star.apogee_id])\n",
     "            R = mcmc_f[star.apogee_id]['chain-stats/gelman_rubin'][:]\n",
     "        else:\n",
@@ -190,10 +243,11 @@
     "        for k in samples.keys():\n",
     "            rows[k].append(MAP[k])\n",
     "            \n",
-    "            if unimodal_converged[i]:\n",
-    "                rows[k+'_err'].append(1.5 * median_absolute_deviation(samples[k]))\n",
-    "            else:\n",
-    "                rows[k+'_err'].append(np.nan * samples[k].unit)\n",
+    "#             if unimodal_converged[i]:\n",
+    "#                 rows[k+'_err'].append(1.5 * median_absolute_deviation(samples[k]))\n",
+    "#             else:\n",
+    "#                 rows[k+'_err'].append(np.nan * samples[k].unit)\n",
+    "            rows[k+'_err'].append(1.5 * median_absolute_deviation(samples[k]))\n",
     "            \n",
     "        rows['t0'].append(data.t0.tcb.mjd)\n",
     "        rows['converged'].append(unimodal_converged[i])\n",
@@ -288,15 +342,14 @@
     "    m1_samples = np.exp(N(ness_row['lnM'], ness_row['e_logM'], size=n_samples)) * u.Msun\n",
     "    loggs = N(star.logg, star.logg_err, n_samples)\n",
     "    \n",
-    "    if row['converged']:\n",
-    "        Ps = N(row['P'], row['P_err'], n_samples) * tbl['P'].unit\n",
-    "        Ks = N(row['K'], row['K_err'], n_samples) * tbl['K'].unit\n",
-    "        es = N(row['e'], row['e_err'], n_samples)\n",
+    "    Ps = N(row['P'], row['P_err'], n_samples) * tbl['P'].unit\n",
+    "    Ks = N(row['K'], row['K_err'], n_samples) * tbl['K'].unit\n",
+    "    es = N(row['e'], row['e_err'], n_samples)\n",
     "        \n",
-    "    else:\n",
-    "        Ps = ([row['P']] * n_samples) * tbl['P'].unit\n",
-    "        Ks = ([row['K']] * n_samples) * tbl['K'].unit\n",
-    "        es = np.array([row['e']] * n_samples)\n",
+    "#     else:\n",
+    "#         Ps = ([row['P']] * n_samples) * tbl['P'].unit\n",
+    "#         Ks = ([row['K']] * n_samples) * tbl['K'].unit\n",
+    "#         es = np.array([row['e']] * n_samples)\n",
     "        \n",
     "        \n",
     "    mass_func = mf(P=Ps, K=Ks, e=es)\n",
@@ -531,25 +584,36 @@
    "outputs": [],
    "source": [
     "# unimodal:\n",
-    "suspect = ['2M05224382+4300425', \n",
-    "           '2M08103416+3152116', '2M08423210+1107222', \n",
-    "           '2M08505498+1156503', '2M08510723+1153019',\n",
-    "           '2M08512530+1202563', '2M08542841+1113088',\n",
-    "           '2M09522871+3811487', '2M10264342+1340172', \n",
-    "           '2M10513288-0250550', '2M13162279+1739074',\n",
-    "           '2M13175687+7151180', '2M13484871+1913474',\n",
-    "           '2M15101168+6708289', '2M16342938-1248117',\n",
-    "           '2M17105698+4301117', '2M18343302+1949166',\n",
-    "           '2M18481414-0251133', '2M17223366+4850318']\n",
+    "check = np.array([\n",
+    "    '2M05224382+4300425',\n",
+    "    '2M08505498+1156503',\n",
+    "    '2M08510723+1153019',\n",
+    "    '2M08512530+1202563', \n",
+    "    '2M09522871+3811487', \n",
+    "    '2M10264342+1340172', \n",
+    "    '2M10513288-0250550',\n",
+    "    '2M13011859+2844170',\n",
+    "    '2M13162279+1739074',\n",
+    "    '2M13175687+7151180',\n",
+    "    '2M13484871+1913474',\n",
+    "    '2M14574438+2106271',\n",
+    "    '2M15054553+2220325',\n",
+    "    '2M15101168+6708289', \n",
+    "    '2M16342938-1248117',\n",
+    "    '2M18012240-0920302',\n",
+    "    '2M18343302+1949166',\n",
+    "    '2M18481414-0251133', \n",
+    "    '2M17223366+4850318',\n",
+    "    '2M15184139+0206004',\n",
+    "    '2M21260907+1100178',\n",
+    "    '2M17105698+4301117'\n",
+    "])\n",
     "\n",
-    "check = ['2M10211972+1437528', '2M11503930+0154015',\n",
-    "         '2M11564409+3427026', '2M13011859+2844170',\n",
-    "         '2M14064289+3001479', '2M14574438+2106271',\n",
-    "         '2M15054553+2220325', '2M15184139+0206004',\n",
-    "         '2M16131259+5043080', '2M16370809+3657115',\n",
-    "         '2M16434022+3712017', '2M18012240-0920302',\n",
-    "         '2M19205784+3747067', '2M21260907+1100178',\n",
-    "         '2M21374395+4304268', '2M09283916+5617343']\n",
+    "# Suspect:\n",
+    "# SUSPECT_BROAD_LINES, or SUSPECT_RV_COMBINATIONS\n",
+    "suspect = full_catalog['APOGEE_ID'][(full_catalog['STARFLAG'] & np.sum(2**np.array([16]))) != 0]\n",
+    "check = check[~np.isin(check, suspect)]\n",
+    "print(len(suspect), len(check))\n",
     "\n",
     "clean_flag = np.zeros(len(full_catalog), dtype=int)\n",
     "clean_flag[np.isin(full_catalog['APOGEE_ID'], check)] = 1\n",
@@ -581,7 +645,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = QTable.read(path.join(table_path, 'highK-unimodal.fits'), astropy_native=True)"
+    "test = QTable.read(path.join(table_path, 'highK-unimodal.fits'), \n",
+    "                   astropy_native=True, character_as_bytes=False)"
    ]
   },
   {
