--- a/notebooks/figures/Results.ipynb
+++ b/notebooks/figures/Results.ipynb
@@ -10,6 +10,7 @@
     "from os import path\n",
     "\n",
     "# Third-party\n",
+    "import astropy.coordinates as coord\n",
     "from astropy.constants import G\n",
     "from astropy.io import fits, ascii\n",
     "from astropy.stats import median_absolute_deviation\n",
@@ -68,10 +69,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unimodal = QTable.read(path.join(table_path, 'highK-unimodal.fits'), astropy_native=True)\n",
-    "bimodal = QTable.read(path.join(table_path, 'highK-bimodal.fits'), astropy_native=True)\n",
-    "clean_uni = unimodal[(unimodal['clean_flag'] == 0) & (unimodal['LOGG'] > 0) & (unimodal['TEFF'] > 0)]\n",
-    "clean_bi = bimodal[(bimodal['clean_flag'] == 0) & (bimodal['LOGG'] > 0) & (bimodal['TEFF'] > 0)]\n",
+    "(unimodal['LOGG'] <= 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unimodal = QTable.read(path.join(table_path, 'highK-unimodal.fits'), \n",
+    "                       astropy_native=True, character_as_bytes=False)\n",
+    "bimodal = QTable.read(path.join(table_path, 'highK-bimodal.fits'), \n",
+    "                      astropy_native=True, character_as_bytes=False)\n",
+    "\n",
+    "clean_uni = unimodal[(unimodal['clean_flag'] == 0)]\n",
+    "clean_conv_uni = clean_uni[clean_uni['converged']]\n",
+    "clean_bi = bimodal[(bimodal['clean_flag'] == 0)]# & (bimodal['LOGG'] > 0) & \n",
+    "#                    (bimodal['TEFF'] > 0)]\n",
     "\n",
     "print('{0} unimodal, {1} clean'.format(len(unimodal), len(clean_uni)))\n",
     "print('{0} bimodal, {1} clean'.format(len(bimodal)//2, len(clean_bi)//2))"
@@ -136,6 +151,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Which were already in the SB9 catalog?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sb9 = fits.getdata('../../data/sb9.fit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_sb9 = coord.SkyCoord(ra=sb9['RAJ2000']*u.deg, dec=sb9['DEJ2000']*u.deg)\n",
+    "c_uni = coord.SkyCoord(ra=clean_uni['RA']*u.deg, dec=clean_uni['DEC']*u.deg)\n",
+    "c_bi = coord.SkyCoord(ra=clean_bi['RA']*u.deg, dec=clean_bi['DEC']*u.deg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx, sep_uni, _ = c_uni.match_to_catalog_sky(c_sb9)\n",
+    "idx, sep_bi, _ = c_bi.match_to_catalog_sky(c_sb9)\n",
+    "(sep_uni < 2*u.arcsec).sum(), (sep_bi < 2*u.arcsec).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "((sep_uni < 2*u.arcsec) & np.logical_not(np.isin(np.unique(clean_uni['APOGEE_ID']), troup['APOGEE_ID']))).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## logg-Teff, logg-Period"
    ]
   },
@@ -145,84 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uni_style = dict(alpha=0.7, marker='o', color='k', linewidth=0, s=14)\n",
-    "uni_style_r = uni_style.copy()\n",
-    "uni_style_r['color'] = 'tab:red'\n",
-    "\n",
-    "bi_style = dict(alpha=0.3, marker='s', color='tab:blue', s=15, zorder=-10, linewidth=0)\n",
-    "err_alpha = 0.2\n",
-    "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(9., 5), sharey=True)\n",
-    "\n",
-    "ax = axes[0]\n",
-    "\n",
-    "ax.scatter(clean_uni[~clean_uni['TINGRC']]['TEFF'], clean_uni[~clean_uni['TINGRC']]['LOGG'], \n",
-    "           label='unimodal', **uni_style)\n",
-    "ax.scatter(clean_uni[clean_uni['TINGRC']]['TEFF'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
-    "           label='unimodal RC', **uni_style_r)\n",
-    "\n",
-    "# ax.scatter(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
-    "#            label='bimodal', **bi_style)\n",
-    "ax.legend(loc='upper left', fontsize=14)\n",
-    "\n",
-    "ax.errorbar(clean_uni['TEFF'], clean_uni['LOGG'],\n",
-    "            xerr=clean_uni['TEFF_ERR'], yerr=clean_uni['LOGG_ERR'],\n",
-    "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
-    "            color=uni_style['color'])\n",
-    "\n",
-    "# ax.errorbar(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
-    "#             xerr=clean_bi['TEFF_ERR'][::2], yerr=clean_bi['LOGG_ERR'][::2],\n",
-    "#             marker='', linestyle='none', alpha=err_alpha, zorder=-100, \n",
-    "#             color=bi_style['color'])\n",
-    "\n",
-    "ax.set_xlim(5900, 3600)\n",
-    "ax.set_ylim(4, 0)\n",
-    "ax.set_xlabel(r'temperature, $T_{\\rm eff}$ [K]')\n",
-    "ax.set_ylabel(r'surface gravity, $\\log g$')\n",
-    "\n",
-    "# ---\n",
-    "\n",
-    "ax = axes[1]\n",
-    "ax.scatter(clean_uni[~clean_uni['TINGRC']]['P'], clean_uni[~clean_uni['TINGRC']]['LOGG'], \n",
-    "           label='unimodal', **uni_style)\n",
-    "ax.scatter(clean_uni[clean_uni['TINGRC']]['P'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
-    "           label='unimodal RC', **uni_style_r)\n",
-    "\n",
-    "ax.errorbar(clean_uni['P'].value, clean_uni['LOGG'],\n",
-    "            xerr=clean_uni['P_err'].value, yerr=clean_uni['LOGG_ERR'],\n",
-    "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
-    "            color=uni_style['color'])\n",
-    "\n",
-    "# ax.scatter(clean_bi['P'], clean_bi['LOGG'], **bi_style)\n",
-    "# ax.plot(np.vstack((clean_bi['P'][::2].value, clean_bi['P'][1::2].value)), \n",
-    "#         np.vstack((np.array(clean_bi['LOGG'])[::2], np.array(clean_bi['LOGG'])[1::2])), \n",
-    "#         marker='', linestyle='-', alpha=err_alpha,\n",
-    "#         color=bi_style['color'])\n",
-    "\n",
-    "loggs = np.linspace(0, 4, 128)\n",
-    "Psurfs = period_at_surface(1.*u.Msun, logg=loggs, e=0, M2=0*u.Msun)\n",
-    "color = '#bbbbbb'\n",
-    "ax.plot(Psurfs.to(u.day).value, loggs, marker='', zorder=-100, \n",
-    "        color=color, linewidth=1)\n",
-    "ax.axvline(period_at_surface(1.*u.Msun, logg=0, e=0, M2=0*u.Msun).value, \n",
-    "           linestyle='--', zorder=-100, color=color)\n",
-    "ax.axhline(2.3, linestyle='--', zorder=-100, color=color)\n",
-    "\n",
-    "ax.set_xscale('log')\n",
-    "ax.set_xlabel('period, $P$ [day]')\n",
-    "ax.set_xlim(0.8, 2000)\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "# fig.savefig(path.join(plot_path, 'P-Teff-logg.pdf'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uni_colors = ['k', '#555555']\n",
+    "uni_colors = ['k', '#777777']\n",
     "uni_sizes = [14, 8]\n",
     "uni_zorders = [10, -10]\n",
     "uni_labels = ['unimodal, MCMC', r'unimodal, The Joker']\n",
@@ -241,13 +226,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# uni_style_r = dict(alpha=0.7, marker='^', color='tab:red', linewidth=0, s=26)\n",
-    "uni_converged = clean_uni[clean_uni['converged']]\n",
-    "\n",
     "fig, axes = plt.subplots(2, 2, figsize=(9, 9), sharey='row', sharex='col')\n",
     "\n",
     "ax = axes[0, 0]\n",
-    "uni_cats = [clean_uni[clean_uni['converged']], clean_uni[~clean_uni['converged']]]\n",
+    "uni_cats = [clean_conv_uni, clean_uni[~clean_uni['converged']]]\n",
     "for cat, color, zorder, label, s in zip(uni_cats, uni_colors, uni_zorders, uni_labels, uni_sizes):\n",
     "    style = uni_style.copy()\n",
     "    style['color'] = color\n",
@@ -255,12 +237,9 @@
     "    style['s'] = s\n",
     "    ax.scatter(cat['P'], cat['e'], \n",
     "               label=label, **style)\n",
-    "    \n",
-    "# ax.scatter(clean_uni[clean_uni['TINGRC']]['P'], clean_uni[clean_uni['TINGRC']]['e'], \n",
-    "#            label='unimodal RC', **uni_style_r)\n",
     "\n",
-    "ax.errorbar(uni_converged['P'].value, uni_converged['e'],\n",
-    "            xerr=uni_converged['P_err'].value, yerr=uni_converged['e_err'],\n",
+    "ax.errorbar(clean_uni['P'].value, clean_uni['e'],\n",
+    "            xerr=clean_uni['P_err'].value, yerr=clean_uni['e_err'],\n",
     "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
     "            color=uni_style['color'])\n",
     "\n",
@@ -348,15 +327,6 @@
     "axes[0, 1].set_visible(False)\n",
     "\n",
     "fig.savefig(path.join(plot_path, 'P-Teff-logg-e.pdf'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_uni[clean_uni['TINGRC'] & (clean_uni['P'] < 150*u.day)]['APOGEE_ID']"
    ]
   },
   {
