refs and update unimodal table

--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2018-03-20 15:57:29 -0400 
+%% Created for Adrian Price-Whelan at 2018-03-27 09:58:10 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{2005ApJ...620..970M,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...620..970M},
+	Author = {{Meibom}, S. and {Mathieu}, R.~D.},
+	Date-Added = {2018-03-27 13:58:10 +0000},
+	Date-Modified = {2018-03-27 13:58:10 +0000},
+	Doi = {10.1086/427082},
+	Eprint = {astro-ph/0412147},
+	Journal = {\apj},
+	Keywords = {Stars: Binaries: Spectroscopic, Galaxy: Open Clusters and Associations: General},
+	Month = feb,
+	Pages = {970-983},
+	Title = {{A Robust Measure of Tidal Circularization in Coeval Binary Populations: The Solar-Type Spectroscopic Binary Population in the Open Cluster M35}},
+	Volume = 620,
+	Year = 2005,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1086/427082}}
 
 @misc{Huber:2017,
 	Abstractnote = {Asteroseismic Hertzsprung-Russell diagram from Fig. 8 of Huber et al. (2011), with oscillation amplitudes in the Kepler bandpass converted into radial velocity amplitudes following Kjeldsen & Bedding (1995) with a central wavelength for the Kepler bandpass of 600nm. The diagram allows an estimation of the expected radial velocity jitter for a given oscillation timescale (y-axis). Note that higher amplitude jitter due to granulation may occur on longer timescales. Solid lines show representative solar-metallicity evolutionary tracks with masses as indicated.},
