--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -1177,8 +1177,13 @@ license.
 
 \acknowledgements
 
-It is a pleasure to thank Keith Hawkins (Columbia), Yuan-Sen Ting (Princeton),
-\todo{who else?}.
+It is a pleasure to thank
+Kevin Covey (WWU),
+Marina Kounkel (WWU),
+Keith Hawkins (Columbia),
+Melissa Ness (Columbia/Flatiron),
+David Spergel (Princeton/Flatiron),
+and Yuan-Sen Ting (Princeton).
 
 Funding for the Sloan Digital Sky Survey IV has been provided by the Alfred P. Sloan Foundation, the U.S. Department of Energy Office of Science, and the Participating Institutions. SDSS-IV acknowledges
 support and resources from the Center for High-Performance Computing at
