--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -92,7 +92,37 @@
 \affiliation{Max-Planck-Institut f\"ur Astronomie,
              K\"onigstuhl 17, D-69117 Heidelberg, Germany}
 
-\author{APOGEE Team}
+% APOGEE RV var co-authors
+\author{Nathan De Lee}
+\affiliation{Department of Physics and Astronomy, Vanderbilt University, VU Station 1807, Nashville, TN 37235, USA}
+
+\author{Steven R. Majewski}
+\affiliation{Department of Astronomy, University of Virginia, Charlottesville, VA 22904-4325, USA}
+
+\author{David L. Nidever}
+\affiliation{Department of Physics, Montana State University, P.O. Box
+173840, Bozeman, MT 59717-3840}
+\affiliation{National Optical Astronomy Observatory, 950 North Cherry
+Ave, Tucson, AZ 85719}
+
+\author{Nicholas Troup}
+\affiliation{}
+
+% Other APOGEE co-authors:
+\author{Jos\'e G. Fern\'andez-Trincado}
+\affiliation{Departamento de Astronom\'ia, Universidad de Concepci\'on, Casilla 160-C, Concepci\'on, Chile}
+
+\author{Domingo An\'ibal Garc\'ia-Hern\'andez}
+\affiliation{Instituto de Astrof\'isica de Canarias, 38205 La Laguna, Tenerife, Spain}
+
+\author{Pen\'elope Longa-Pe\~na}
+\affiliation{Unidad de Astronom\'ia, Universidad de Antofagasta, Avenida Angamos 601, Antofagasta 1270300, Chile}
+
+\author{Christian Nitschelm}
+\affiliation{Unidad de Astronom\'ia, Universidad de Antofagasta, Avenida Angamos 601, Antofagasta 1270300, Chile}
+
+\author{Olga Zamora}
+\affiliation{Instituto de Astrof\'isica de Canarias, 38205 La Laguna, Tenerife, Spain}
 
 \begin{abstract}\noindent % trust me
 % Context
